# jinzhao-attest

./: .clang-black-list  .clang-format  .clang-white-list  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  dockerenv.sh
cmake/: CheckTeeEnv.cmake  FindSGX.cmake  UalSources.cmake
deployment/conf/: unified_attestation.json
samples/: CMakeLists.txt
samples/unified-attestation-generation/: CMakeLists.txt
samples/unified-attestation-generation/app/: app.cpp  app.h
samples/unified-attestation-instance-ree/: CMakeLists.txt
samples/unified-attestation-instance-ree/app/: app.cpp  app.h
samples/unified-attestation-instance-ree/enclave/: enclave.cpp  enclave.h
samples/unified-attestation-multi-threads/: CMakeLists.txt
samples/unified-attestation-multi-threads/app/: app.cpp  app.h
samples/unified-attestation-multi-threads/enclave/: enclave.cpp  enclave.h
samples/unified-attestation-nested-report/: CMakeLists.txt
samples/unified-attestation-nested-report/app/: app.cpp  app.h
samples/unified-attestation-nested-report/enclave/: enclave.cpp  enclave.edl  enclave.h
samples/unified-attestation-report-convert/: CMakeLists.txt
samples/unified-attestation-report-convert/app/: app.cpp  app.h
samples/unified-attestation-verification-trusted/: CMakeLists.txt
samples/unified-attestation-verification-trusted/app/: app.cpp  app.h
samples/unified-attestation-verification-trusted/enclave/: enclave.cpp  enclave.edl  enclave.h
samples/unified-attestation-verification-untrusted/: CMakeLists.txt
samples/unified-attestation-verification-untrusted/app/: app.cpp  app.h
tools/: .gitignore  bom_samples_gnu.yaml  bom_samples_musl.yaml  clangformat_all.sh  cpplint.py  cpplint_all.sh  dump_enclave_info.sh  occlum_build_prepare.sh  occlum_run_samples.sh  sign_config_file.sh  static_build_prepare.sh
ual/: CMakeLists.txt
ual/cmake/ual_trusted/: CMakeLists.txt
ual/cmake/ual_untrusted/: CMakeLists.txt
ual/common/: aes.cpp  asymmetric_crypto.cpp  attestation.cpp  bytes.cpp  envelope.cpp  hash.cpp  rsa.cpp  sha.cpp  sm2.cpp  sm3.cpp  sm4.cpp  symmetric_crypto.cpp  uak.cpp
ual/enclave/config/: enclave.config.Release.xml
ual/enclave/edl/: .gitignore  attestation.edl
ual/enclave/lds/: enclave_HYPERENCLAVE.lds
ual/generation/core/: generator.cpp  generator_interface.cpp
ual/generation/trusted/: CMakeLists.txt  trusted_ua_generation.cpp
ual/generation/untrusted/: CMakeLists.txt  untrusted_ua_generation.cpp  untrusted_unified_attestation_generation.cpp
ual/grpc/: CMakeLists.txt  untrusted_grpc_client.cpp  untrusted_grpc_server.cpp
ual/include/: cppcodec  google  rapidjson
ual/include/attestation/common/: aes.h  asymmetric_crypto.h  attestation.h  bytes.h  crypto.h  envelope.h  error.h  hash.h  log.h  protobuf.h  pthread.h  rsa.h  scope.h  sha.h  sm2.h  sm3.h  sm4.h  symmetric_crypto.h  table.h  type.h  uak.h
ual/include/attestation/generation/: ua_generation.h  unified_attestation_generation.h
ual/include/attestation/generation/core/: generator.h  generator_interface.h
ual/include/attestation/instance/: trusted_tee_instance.h  trusted_tee_instance_interface.h  trusted_unified_function.h  unified_attestation_instance.h  untrusted_ree_instance.h  untrusted_ree_instance_interface.h  untrusted_unified_function.h
ual/include/attestation/verification/: ua_verification.h  unified_attestation_verification.h
ual/include/attestation/verification/core/: verifier.h  verifier_interface.h
ual/include/grpc/: untrusted_grpc_client.h  untrusted_grpc_server.h
ual/include/network/: curl_http_client.h  hygon_kds_client.h  ias_client.h  pccs_client.h  report_convert.h  uas_client.h
ual/include/sgx/: sgx_edger8r.h  sgx_enclave_common.h
ual/include/sgx/ipp/: ippcp.h  sgx_ippcp.h
ual/include/unified_attestation/: ua_trusted.h  ua_untrusted.h
ual/include/utils/untrusted/: untrusted_fs.h  untrusted_json.h  untrusted_memory.h  untrusted_ua_config.h
ual/instance/trusted/: CMakeLists.txt  trusted_tee_instance.cpp  trusted_tee_instance_interface.cpp  trusted_unified_function.cpp
ual/instance/untrusted/: CMakeLists.txt  unified_attestation_instance.cpp  untrusted_ree_instance.cpp  untrusted_ree_instance_interface.cpp  untrusted_unified_function.cpp
ual/network/: CMakeLists.txt  curl_http_client.cpp  report_convert.cpp
ual/network/hygon/: hygon_kds_client.cpp
ual/network/ias/: ias_client.cpp
ual/network/pccs/: pccs_client.cpp
ual/network/uas/: uas_client.cpp
ual/proto/: attestation.proto  crypto.proto  pccs.proto  tee.proto  uas.proto
ual/utils/trusted/: trusted_log.cpp
ual/utils/untrusted/: untrusted_fs.cpp  untrusted_json.cpp  untrusted_log.cpp  untrusted_memory.cpp
ual/verification/core/: ua_verification.cpp  unified_attestation_verification.cpp  verifier.cpp  verifier_interface.cpp
ual/verification/tdx/: verifier_tdx_dcap.cc
ual/verification/trusted/: CMakeLists.txt  trusted_functions.cpp
ual/verification/uas/: verifier_uas.cpp  verifier_uas.h
ual/verification/untrusted/: CMakeLists.txt  untrusted_functions.cpp
